Fixed issues causing horizontal scrolling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,7 +47,6 @@ body {
   color: var(--dark3);
   background-color: var(--light2);
   transition: var(--train);
-  overflow-x: hidden;
   text-decoration: none;
 }
 
