--- a/client/src/pages/global/CustomFooter.module.css
+++ b/client/src/pages/global/CustomFooter.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100vw;
   font-size: 1.25em;
-  padding: 1rem;
+  padding: 1rem 0 1rem 0;
   background-color: var(--light1);
   box-shadow: var(--heavy_shadow);
   z-index: 1;
